# smartfarm

./: .gitignore  README.md
src/: CMakeLists.txt  pyproject.toml
src/io/inputs/: key_crop_dict.json  key_crop_styles.json  key_region_dict.json
src/io/inputs/nsrdb/: nsrdb_georgia_1013393.csv  nsrdb_iowa_773067.csv
src/io/outputs/csv_crop_growth/: corn_growth_results_single_plant_daily.csv  corn_growth_results_single_plant_hourly.csv  cotton_growth_results_single_plant_hourly.csv  grapes_growth_results_single_plant_hourly.csv  oranges_growth_results_single_plant_daily.csv  oranges_growth_results_single_plant_hourly.csv  rice_growth_results_single_plant_hourly.csv  soybeans_growth_results_single_plant_daily.csv  soybeans_growth_results_single_plant_hourly.csv  wheat_growth_results_single_plant_daily.csv
src/sandbox/: hourly_temp_water_fertilizer.csv  smartfarm.ipynb
src/sandbox/MATLAB/: decompose_leaf_area.m  gaussian_like.asv  gaussian_like_fertilizer.m  gaussian_like_temp.m  gaussian_like_water.asv  general_gaussian_like.asv  leaf_area_param_fitting.m  total_model_param_fitting.m
src/smartfarm/: README.md
src/smartfarm/core/aws/: README.md  dockerfile  ec2-user@204.236.162.217  lambda_handler.py  lambda_member.py  lambda_orchestrator.py  lambda_test.json  (+1 more)
src/smartfarm/examples/: analyze_results.ipynb  ga_parallel.ipynb  ga_parallel_result.pkl  input_disturbances_precipitation.txt  inputs_and_disturbances.ipynb  metabolism_analysis.ipynb  output_get_cost.csv  single_simulation.ipynb  single_simulation_no_optimization.ipynb  smartfarm2.ipynb  smartfarm3.ipynb
(+331 files in other folders)
