[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11",
  "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "ga_member_cpp"
version = "0.1.0"
description = "C++ evaluator for SmartFarm GA member cost (pybind11)"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.version = ">=3.18"
build.verbose = true

# Map package name -> path to that package
[tool.scikit-build.wheel.packages]
ga_member_cpp = "smartfarm/core/python/ga_member_cpp"
